grammar.js
    source: ($) => choice(
      repeat1($._top_level_declaration),
      $.block
    ),

    // A file holds either declarations or a bare statement list. Vendors export
    // one POU per file, so a lone `METHOD`, a global variable list, or a leading
    // pragma are all whole files in practice.
    _top_level_declaration: ($) =>
      choice(
        $.function_block_declaration,
        $.test_function_block_declaration,
        $.function_declaration,
        $.program_declaration,
        $.class_declaration,
        $.interface_declaration,
        $._pou_member,
        $.type_declaration,
        $.configuration_declaration,
        // Only a global variable list stands alone as a file. Admitting every
        // section here would let a bare `VAR` open one, which collides with
        // `var` used as an ordinary identifier.
        $.var_global,
        $.pragma
      ),

    // A simple statement is always terminated by `;`. After a compound
    // statement the terminator is optional, which is what most vendors accept
    // and what the sources in the wild rely on (`END_IF` on its own line).
    block: ($) =>
      repeat1(
        choice(
          seq($._simple_statement, SEMICOLON),
          $._terminated_compound_statement,
          $.noop,
          $.pragma
        )
      ),

    _terminated_compound_statement: ($) =>
      prec.right(seq($._compound_statement, optional(SEMICOLON))),

    // Program organization units
    function_block_declaration: ($) =>
      seq(
        caseInsensitive("function_block"),
        optional(field("access", $.access_specifier)),
        field("name", $.identifier),
        optional($.extends_clause),
        optional($.implements_clause),
        repeat(field("var_section", $._var_section)),
        field("body", optional($.block)),
        repeat(field("member", $._pou_member)),
        caseInsensitive("end_function_block")
      ),

    // Unit-test POU as used by ST test frameworks. Body is identical to a
    // regular function block.
    _pou_member: ($) =>
      choice(
        $.method_declaration,
        $.property_declaration,
        $.action_declaration
      ),

    // A single base for a class, several for an interface.
    configuration_declaration: ($) =>
      seq(
        caseInsensitive("configuration"),
        field("name", $.identifier),
        repeat(
          choice($._var_section, $.resource_declaration, $._resource_member)
        ),
        caseInsensitive("end_configuration")
      ),

    resource_declaration: ($) =>
      seq(
        caseInsensitive("resource"),
        field("name", $.identifier),
        caseInsensitive("on"),
        field("type", $.identifier),
        repeat(choice($._var_section, $._resource_member)),
        caseInsensitive("end_resource")
      ),

    _resource_member: ($) =>
      choice($.task_declaration, $.program_configuration),

    task_declaration: ($) =>
      seq(
        caseInsensitive("task"),
        field("name", $.identifier),
        "(",
        parameterList($.task_parameter),
        ")",
        ";"
      ),

    // `INTERVAL := t#20ms`, `PRIORITY := 1`, `SINGLE := Trigger`.
    task_parameter: ($) =>
      seq(field("name", $.identifier), ":=", field("value", $._expression)),

    program_configuration: ($) =>
      seq(
        caseInsensitive("program"),
        field("name", $.identifier),
        optional(seq(caseInsensitive("with"), field("task", $.identifier))),
        ":",
        field("type", $.identifier),
        optional(seq("(", parameterList($.param_assignment), ")")),
        ";"
      ),

    type_declaration: ($) =>
      seq(
        caseInsensitive("type"),
        repeat1($.type_definition),
        caseInsensitive("end_type")
      ),

    // A struct, a union, an enumeration, or an alias for any other type —
    // which covers the subrange (`INT (0..100)`) and array
    // (`ARRAY[0..9] OF INT`) forms.
    type_definition: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field(
          "definition",
          choice(
            $.struct_definition,
            $.union_definition,
            $.enum_definition,
            $.type_name
          )
        ),
        optional(seq(":=", field("initial_value", $._initial_value))),
        // Vendors terminate the definition with `;` after an enumeration or an
        // alias but not always after `END_STRUCT`/`END_UNION`.
        optional(";")
      ),

    enum_definition: ($) => seq("(", commaSep1($.enum_member), ")"),

    enum_member: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":=", field("value", $._expression)))
      ),

    struct_definition: ($) =>
      seq(
        caseInsensitive("struct"),
        repeat($.struct_field),
        caseInsensitive("end_struct")
      ),

    struct_field: ($) =>
      seq(
        repeat($.pragma),
        field("name", $.identifier),
        optional(seq(caseInsensitive("at"), field("location", $.direct_address))),
        ":",
        field("type", $.type_name),
        optional(seq(":=", field("initial_value", $._initial_value))),
        ";"
      ),

    // Members of a UNION overlay the same memory, so unlike a struct field
    // they take neither an `AT` location nor an initial value.
    _var_section: ($) =>
      choice(
        $.var_input,
        $.var_output,
        $.var_in_out,
        $.var,
        $.var_temp,
        $.var_static,
        $.var_global,
        $.var_external,
        $.var_inst
      ),

    // CONSTANT / RETAIN / NON_RETAIN / PERSISTENT may follow any section
    // keyword, and may be combined (`VAR RETAIN PERSISTENT`).
    var: ($) => varSection($, "var"),
    var_global: ($) => varSection($, "var_global"),
    var_inst: ($) => varSection($, "var_inst"),

    // Comments are `extras`, so they must not be listed here: a comment
    // between the last declaration and END_VAR would otherwise be shifted
    // into a declaration that can never be completed.
    variable_declaration: ($) =>
      seq(
        repeat($.pragma),
        field("name", $.identifier),
        optional(seq(caseInsensitive("at"), field("location", $.direct_address))),
        ":",
        field("type", $.type_name),
        optional(seq(":=", field("initial_value", $._initial_value))),
        ";"
      ),

    // A variable may be initialised with a plain expression, an array
    // initialiser or a structure initialiser.
    _initial_value: ($) =>
      choice($._expression, $.array_initializer, $.structure_initializer),

    // `[1, 2, 3]`, including the `n(value)` repetition form.
    type_name: ($) => choice(
      $.array_type,
      $.sized_type,
      $.pointer_type,
      $.reference_type,
      $.qualified_type_name,
      $.identifier
    ),

    _expression: ($) =>
      choice(
        $.qualified_identifier,
        $.identifier,
        $.deref_expression,
        $.unary_expression,
        $.binary_operator,
        $.boolean_operator,
        $.comparison_operator,
        $.equality_operator,
        $.parenthesized_expression,
        $.function_call,
        $.index_expression,
        $.direct_address,
        $.float_literal,
        $.integer_literal,
        $.string_literal,
        $.time_literal,
        $.date_literal,
        $.time_of_day_literal,
        $.date_and_time_literal,
        $.typed_literal,
        $.true,
        $.false
      ),

    function_call: ($) =>
      seq(
        field("name", $._callable),
        "(",
        parameterList($.param_assignment),
        ")"
      ),

    // A call target may be namespaced (`FPU.IsRealNumber`), a method on an
    // instance (`fb.Run`), or the base implementation (`SUPER^`).
    _callable: ($) =>
      choice($.identifier, $.qualified_identifier, $.deref_expression),

    param_assignment: ($) =>
      choice(
        seq(optional(seq($.identifier, ":=")), $._expression),
        seq(
          optional(caseInsensitive("not")),
          $.identifier,
          "=>",
          field("target", $._variable)
        )
      ),

    true: (_) => choice("TRUE", "true", "True"),
    false: (_) => choice("FALSE", "false", "False"),

    typed_literal: ($) =>
      seq(
        field("type", $.literal_type),
        field(
          "value",
          choice(
            $.float_literal,
            $.integer_literal,
            $.string_literal,
            $.true,
            $.false
          )
        )
      ),

    literal_type: (_) =>
      token(
        seq(
          choice(...ELEMENTARY_TYPES.map((type) => bothCases(type))),
          "#"
        )
      ),

    binary_operator: ($) =>
      choice(
        prec.left(
          PREC.add,
          seq(
            field("left", $._expression),
            field("operator", choice("+", "-")),
            field("right", $._expression)
          )
        ),
        prec.left(
          PREC.multiply,
          seq(
            field("left", $._expression),
            field("operator", choice("*", "/", caseInsensitive("mod"))),
            field("right", $._expression)
          )
        ),
        prec.right(
          PREC.power,
          seq(
            field("left", $._expression),
            field("operator", "**"),
            field("right", $._expression)
          )
        )
      ),

    integer_literal: (_) =>
      token(
        choice(
          seq(choice("2#"), repeat1(/_?[0-1]+/)),
          seq(choice("8#"), repeat1(/_?[0-7]+/)),
          seq(repeat1(/[0-9]+_?/)),
          seq(choice("16#"), repeat1(/_?[A-Fa-f0-9]+/))
        )
      ),

    float_literal: (_) => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent)
          ),
          optional(choice(/[Ll]/, /[jJ]/))
        )
      );
    },

    // Single quoted STRING and double quoted WSTRING, both allowing the IEC
    // `$` escape. Must be a single token so that `extras` cannot be inserted
    // between the quotes.
    time_literal: (_) => {
      const digits = repeat1(/[0-9]/);
      const decimal_digits = seq(digits, optional(seq(".", digits)));

      return token(
        seq(
          seq(
            choice(
              bothCases("ltime"),
              bothCases("time"),
              bothCases("lt"),
              bothCases("t")
            ),
            "#"
          ),
          choice(
            // Milliseconds as smallest unit
            seq(decimal_digits, /[mM][sS]/),
            // Seconds + milliseconds as smallest unit
            seq(digits, /[sS]/, decimal_digits, /[mM][sS]/),
            // Seconds as smallest unit
            seq(decimal_digits, /[sS]/),
            // Minutes + seconds + milliseconds as smallest unit
            seq(digits, /[mM]/, digits, /[sS]/, decimal_digits, /[mM][sS]/),
            // Minutes + seconds as smallest unit
            seq(digits, /[mM]/, decimal_digits, /[sS]/),
            // Minutes as smallest unit
            seq(decimal_digits, /[mM]/),
            // Hours + minutes + seconds + milliseconds as smallest unit
            seq(digits, /[hH]/, digits, /[mM]/, digits, /[sS]/, decimal_digits, /[mM][sS]/),
            // Hours + minutes + seconds as smallest unit
            seq(digits, /[hH]/, digits, /[mM]/, decimal_digits, /[sS]/),
            // Hours + minutes as smallest unit
            seq(digits, /[hH]/, decimal_digits, /[mM]/),
            // Hours as smallest unit
            seq(decimal_digits, /[hH]/),
            // Days + hours + minutes + seconds + milliseconds as smallest unit
            seq(digits, /[dD]/, digits, /[hH]/, digits, /[mM]/, digits, /[sS]/, decimal_digits, /[mM][sS]/),
            // Days + hours + minutes + seconds as smallest unit
            seq(digits, /[dD]/, digits, /[hH]/, digits, /[mM]/, decimal_digits, /[sS]/),
            // Days + hours + minutes as smallest unit
            seq(digits, /[dD]/, digits, /[hH]/, decimal_digits, /[mM]/),
            // Days + hours as smallest unit
            seq(digits, /[dD]/, decimal_digits, /[hH]/),
            // Days as smallest unit
            seq(decimal_digits, /[dD]/)
          )
        )
      );
    },

    noop: (_) => SEMICOLON,

    _simple_statement: ($) =>
      choice(
        $.assignment,
        $.fb_invocation,
        $.return,
        $.exit,
        $.continue
      ),

    identifier: (_) => /[_a-zA-Z][_a-zA-Z0-9]*/,

    // Anything that can be read from or assigned to.
    _variable: ($) =>
      choice(
        $.identifier,
        $.qualified_identifier,
        $.index_expression,
        $.deref_expression,
        $.direct_address
      ),

    // A member may be an integer to address a single bit, e.g. `input.0`.
    // The base is not restricted to a plain identifier: `messages[i].step` and
    // `THIS^.state` both start a member chain.
    qualified_identifier: ($) =>
      seq(
        choice($.identifier, $.index_expression, $.deref_expression),
        repeat1(seq(".", choice($.identifier, $.bit_selector)))
      ),

    // `p^`, `THIS^`, `SUPER^`, and chains such as `p^^` or `arr[i]^`.
    bit_selector: (_) => /[0-9]+/,

    // A hardware location: `%IX0.0`, `%QW12`, `%MD100`. The size prefix is
    // optional and `*` stands in for a location assigned by the compiler.
    direct_address: (_) =>
      token(/%[IQMiqm]([XBWDLxbwdl])?([0-9]+(\.[0-9]+)*|\*)/),

    index_expression: ($) =>
      seq(
        field("array", $._variable),
        "[",
        field("index", $._expression),
        repeat(seq(",", field("index", $._expression))),
        "]"
      ),

    // Assignments. `REF=` binds a reference to a variable rather than copying
    // a value into it.
    assignment: ($) =>
      seq(
        field("identifier", $._variable),
        choice(":=", caseInsensitive("ref=")),
        field("expression", $._expression)
      ),

    // If statements
    if_statement: ($) =>
      seq(
        caseInsensitive("if"),
        field("condition", $._expression),
        caseInsensitive("then"),
        field("consequence", optional($.block)),
        repeat(field("alternative", $.elsif_clause)),
        optional(field("alternative", $.else_clause)),
        caseInsensitive("end_if")
      ),

    elsif_clause: ($) =>
      seq(
        caseInsensitive("elsif"),
        field("condition", $._expression),
        caseInsensitive("then"),
        field("consequence", optional($.block))
      ),

    else_clause: ($) =>
      seq(caseInsensitive("else"), field("body", optional($.block))),

    // Case
    case_statement: ($) =>
      seq(
        caseInsensitive("case"),
        field("value", $._expression),
        caseInsensitive("of"),
        field("body", $.case_body),
        optional(field("else", seq(caseInsensitive("else"), optional($.block)))),
        caseInsensitive("end_case")
      ),

    case_body: ($) => repeat1($.case_item),

    case_item: ($) =>
      prec.right(
        seq(field("label", $.case_label), ":", field("body", optional($.block)))
      ),

    case_label: ($) =>
      seq(
        choice($.case_label_single, $.case_label_range),
        repeat(seq(",", choice($.case_label_single, $.case_label_range)))
      ),

    case_label_single: ($) => $._case_label_value,
    case_label_range: ($) =>
      seq($._case_label_value, "..", $._case_label_value),

    // A label is a compile time constant: a literal, an enumerator (possibly
    // qualified, e.g. `Color.Red`), or a boolean.
    _case_label_value: ($) =>
      choice(
        $.integer_literal,
        $.negative_integer,
        $.identifier,
        $.qualified_identifier,
        $.typed_literal,
        $.true,
        $.false
      ),

    negative_integer: ($) => seq("-", $.integer_literal),

    // Loops
