test/corpus/array_index.txt
==================
Array index as assignment target
==================

buffer[i] := 0;

---

(source
  (block
    (assignment
      identifier: (index_expression
        array: (identifier)
        index: (identifier))
      expression: (integer_literal))))

==================
Array index in expression
==================

x := buffer[i + 1];

---

(source
  (block
    (assignment
      identifier: (identifier)
      expression: (index_expression
        array: (identifier)
        index: (binary_operator
          left: (identifier)
          right: (integer_literal))))))

==================
Array index with literal
==================

x := buffer[0];

---

(source
  (block
    (assignment
      identifier: (identifier)
      expression: (index_expression
        array: (identifier)
        index: (integer_literal)))))

==================
Multi dimensional array index comma
==================

m[i, j] := 0;

---

(source
  (block
    (assignment
      identifier: (index_expression
        array: (identifier)
        index: (identifier)
        index: (identifier))
      expression: (integer_literal))))

==================
Multi dimensional array index chained
==================

m[i][j] := 0;

---

(source
  (block
    (assignment
      identifier: (index_expression
        array: (index_expression
          array: (identifier)
          index: (identifier))
        index: (identifier))
      expression: (integer_literal))))

==================
Qualified array index
==================

obj.items[i] := 0;

---

(source
  (block
    (assignment
      identifier: (index_expression
        array: (qualified_identifier
          (identifier)
          (identifier))
        index: (identifier))
      expression: (integer_literal))))

==================
Array index as function argument
==================

result := max(buffer[i], buffer[j]);

---

(source
  (block
    (assignment
      identifier: (identifier)
      expression: (function_call
        name: (identifier)
        (param_assignment
          (index_expression
            array: (identifier)
            index: (identifier)))
        (param_assignment
          (index_expression
            array: (identifier)
            index: (identifier)))))))

==================
Array index in for loop body
==================

for i := 1 to 10 do
    buffer[i] := buffer[i - 1] + 1;
end_for;

---

(source
  (block
    (for_statement
      variable: (identifier)
      start: (integer_literal)
      end: (integer_literal)
      body: (block
        (assignment
          identifier: (index_expression
            array: (identifier)
            index: (identifier))
          expression: (binary_operator
            left: (index_expression
              array: (identifier)
              index: (binary_operator
                left: (identifier)
                right: (integer_literal)))
            right: (integer_literal)))))))
