test/corpus/case_statement.txt
==================
Single numeric case
==================

case x of
    1: 
        ;
end_case;

---

(source
  (block
    (case_statement
      value: (identifier)
      body: (case_body
        (case_item
          label: (case_label
            (case_label_single
              (integer_literal)))
          body: (block
            (noop)))))))

==================
Single sequence case
==================

case x of
    1,6: 
        ;
end_case;

---

(source
  (block
    (case_statement
      value: (identifier)
      body: (case_body
        (case_item
          label: (case_label
            (case_label_single
              (integer_literal))
            (case_label_single
              (integer_literal)))
          body: (block
            (noop)))))))

==================
Single range case
==================

case x of
    1..6: 
        ;
end_case;

---

(source
  (block
    (case_statement
      value: (identifier)
      body: (case_body
        (case_item
          label: (case_label
            (case_label_range
              (integer_literal)
              (integer_literal)))
          body: (block
            (noop)))))))

==================
Single combined case
==================

case x of
    1,3..6: 
        ;
end_case;

---

(source
  (block
    (case_statement
      value: (identifier)
      body: (case_body
        (case_item
          label: (case_label
            (case_label_single
              (integer_literal))
            (case_label_range
              (integer_literal)
              (integer_literal)))
          body: (block
            (noop)))))))

==================
Single variable case
==================

case x of
    myConst: 
        ;
end_case;

---

(source
  (block
    (case_statement
      value: (identifier)
      body: (case_body
        (case_item
          label: (case_label
            (case_label_single
              (identifier)))
          body: (block
            (noop)))))))

==================
Else case
==================

case x of
    1: 
        ;
    ELSE
        ;
end_case;

---

(source
  (block
    (case_statement
      value: (identifier)
      body: (case_body
        (case_item
          label: (case_label
            (case_label_single
              (integer_literal)))
          body: (block
            (noop))))
      else: (block
        (noop)))))

==================
Combined identifiers case
==================

case x of
    b..c, a: 
        ;
    a, b..c: 
        ;
end_case;

---

(source
  (block
    (case_statement
      value: (identifier)
      body: (case_body
        (case_item
          label: (case_label
            (case_label_range
              (identifier)
              (identifier))
            (case_label_single
              (identifier)))
          body: (block
            (noop)))
        (case_item
          label: (case_label
            (case_label_single
              (identifier))
            (case_label_range
              (identifier)
              (identifier)))
          body: (block
            (noop)))))))

==================
Expression value
==================

case x + b / 3 of
    1: 
        ;
end_case;

---

(source
  (block
    (case_statement
      value: (binary_operator
        left: (identifier)
        right: (binary_operator
          left: (identifier)
          right: (integer_literal)))
      body: (case_body
        (case_item
          label: (case_label
            (case_label_single
              (integer_literal)))
          body: (block
            (noop)))))))
