test/corpus/comments.txt
==================
Single line comment
==================

// A single line comment
var := expr;

---

(source
  (comment)
  (block
    (assignment
      identifier: (identifier)
      expression: (identifier))))

==================
Inline comment
==================

var := (* inline comment *) expr;

---

(source
  (block
    (assignment
      identifier: (identifier)
      (comment)
      expression: (identifier))))

==================
Multiline comment
==================

(*
    A single line comment
    Another line
*)
var := expr;

---

(source
  (comment)
  (block
    (assignment
      identifier: (identifier)
      expression: (identifier))))

==================
Comment
==================

(*
    A single line comment
    Another line
*);

---

(source
  (comment)
  (block
    (noop)))

==================
Multiple block comments
==================

FUNCTION_BLOCK Test
VAR
	(* Config vars *)
	Restart : BOOL;
	
	(* Public vars *)
	State: INT;
	
	(* Local vars *)
	_step : INT;
END_VAR
END_FUNCTION_BLOCK

---

(source
  (function_block_declaration
    name: (identifier)
    var_section: (var
      (comment)
      (variable_declaration
        name: (identifier)
        type: (type_name
          (identifier)))
      (comment)
      (variable_declaration
        name: (identifier)
        type: (type_name
          (identifier)))
      (comment)
      (variable_declaration
        name: (identifier)
        type: (type_name
          (identifier))))))

==================
Block comment with asterisks inside
==================

(* This is a comment with * asterisks * inside *)
var := expr;

---

(source
  (comment)
  (block
    (assignment
      identifier: (identifier)
      expression: (identifier))))

==================
Adjacent block comments
==================

(* First comment *)
(* Second comment *)
var := expr;

---

(source
  (comment)
  (comment)
  (block
    (assignment
      identifier: (identifier)
      expression: (identifier))))
