test/corpus/enum_type.txt
==================
Enumeration with explicit values
==================

TYPE TestState:
(
	NotRan   := 0,
	Starting := 1,
	Running  := 2
);
END_TYPE

---

(source
  (type_declaration
    (type_definition
      name: (identifier)
      definition: (enum_definition
        (enum_member
          name: (identifier)
          value: (integer_literal))
        (enum_member
          name: (identifier)
          value: (integer_literal))
        (enum_member
          name: (identifier)
          value: (integer_literal))))))

==================
Enumeration without values
==================

TYPE Color : (Red, Green, Blue); END_TYPE

---

(source
  (type_declaration
    (type_definition
      name: (identifier)
      definition: (enum_definition
        (enum_member
          name: (identifier))
        (enum_member
          name: (identifier))
        (enum_member
          name: (identifier))))))

==================
Enumeration with a trailing comma
==================

TYPE Color : (Red, Green,); END_TYPE

---

(source
  (type_declaration
    (type_definition
      name: (identifier)
      definition: (enum_definition
        (enum_member
          name: (identifier))
        (enum_member
          name: (identifier))))))

==================
Struct keeps its optional terminator
==================

TYPE TestErrorMessage :
STRUCT
	step: INT;
END_STRUCT
END_TYPE

---

(source
  (type_declaration
    (type_definition
      name: (identifier)
      definition: (struct_definition
        (struct_field
          name: (identifier)
          type: (type_name
            (identifier)))))))

==================
Struct with an explicit terminator
==================

TYPE TestErrorMessage :
STRUCT
	step: INT;
END_STRUCT;
END_TYPE

---

(source
  (type_declaration
    (type_definition
      name: (identifier)
      definition: (struct_definition
        (struct_field
          name: (identifier)
          type: (type_name
            (identifier)))))))
